src/components/Solution/Solution.module.css
.container {
  background-color: var(--tan);
  border-top: 1px solid var(--lightBlack);
  height: 100%;
}

.content {
  padding-top: 5rem;
  display: grid;
  grid-template-columns: 2fr 1.5fr;
  grid-gap: 5rem;
}

.left {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  gap: 2rem;
}

.heading {
  line-height: 120%;
  /* width: 80%; */
}

.em {
  font-family: var(--PerfectlyNinetiesItalic);
  text-decoration: underline;
  line-height: 110%;
  margin-left: 1rem;
}

.copy {
  font-weight: 500;
  opacity: 0.8;
}

.right {
  display: flex;
  align-items: center;
  justify-content: center;
}

.imgContainer {
  position: relative;
  width: 100%;
  height: 100%;
}

.img {
  object-fit: contain;
}

.rightBottom {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: 1rem;
  margin-top: 1rem;
}

.card {
  border: 1px solid var(--lightBlack);
  border-radius: 10px;
  padding: 2rem;
  background-color: var(--white);
}

.title {
  font-size: 2rem;
  margin-bottom: 1rem;
}

.desc {
  opacity: 0.8;
}

@media screen and (max-width: 1385px) {
  .imgContainer {
    height: 500px;
  }
}

@media screen and (max-width: 1068px) {
  .content {
    grid-template-columns: repeat(1, 1fr);
    gap: 10rem;
  }

  .heading,
  .copy {
    text-align: center;
    width: 100%;
  }

  .copy {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
  }

  .imgContainer {
    height: 750px;
  }
}

@media screen and (max-width: 768px) {
  .copy {
    width: 100%;
    text-align: left;
  }

  .imgContainer {
    height: 500px;
  }
}

@media screen and (max-width: 568px) {
  .imgContainer {
    height: 400px;
  }
}

@media screen and (max-width: 480px) {
  .imgContainer {
    height: 350px;
  }
}

@media screen and (max-width: 400px) {
  .imgContainer {
    height: 300px;
  }
}

